1) Finally figured out how to get posthoc pairwise letters to show up as desired - using an alpha of 0.10 to determine significance AND having letters show up in alphabetical order :) 2) Updated readme to include all scripts now 3) Updated script notes at top of all .rmd files

--- a/scripts/data_analysis/d13C_analysis.Rmd
+++ b/scripts/data_analysis/d13C_analysis.Rmd
@@ -19,6 +19,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## d13C_analysis
 
+**Script Notes**
+Script to visualize and analyze differences in d13C isotope ratio values for both pH and H2O experiments.  
+
 ```{r loading libraries}
 
 library(tidyverse)
