--- a/scripts/data_analysis/H2O_Relative_CH4Conc_Difference.Rmd
+++ b/scripts/data_analysis/H2O_Relative_CH4Conc_Difference.Rmd
@@ -19,7 +19,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # H2O Experiment CH4 & CO2 Concentration Analysis 
 
-**Notes on script iterations & analysis process:**
+**Script Notes**
+
 
 ## Set up 
 ```{r loading libraries}
