--- a/scripts/data_analysis/pH_Relative_CH4Conc_Difference.Rmd
+++ b/scripts/data_analysis/pH_Relative_CH4Conc_Difference.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # pH Experiment CH4 & CO2 Concentration Analysis 
 
-**Notes on script iterations & analysis process:**
+**Script Notes**
 I also repeated this analysis for the concentration values but normalized by incubation duration time (days). It did not change the significance of the results for timepoint 2, but the results were a little different for timepoint 1, but made less sense. So i am just going with raw concentration values because I think they're more directly interpretable. 
 Time normalized concentration analysis are now archived in old section of code (unless i really decide i don't need later and decide to delete.)
 Also moved code to OLD for combining the T1 & T2 plots into one figure because we decided we didn't want to present in 4 panel way because didn't want to encourage the comparisons between T1 and T2 concentrations within soil type. 
